[BG-2036] error tooltips are correctly aligned in responsive view now

--- a/project-base/src/Shopsys/ShopBundle/Resources/styles/front/common/components/form/error.less
+++ b/project-base/src/Shopsys/ShopBundle/Resources/styles/front/common/components/form/error.less
@@ -115,5 +115,21 @@
             font-size: 12px;
             color: @color-f;
         }
+        
+        &.right {
+            left: -170%;
+            
+            &:after {
+                left: 87%;
+            }
+        }
+        
+        &.left {
+            left: 60px;
+            
+            &:after {
+                left: 9%;
+            }
+        }
     }
 }
